--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+/bootcamp_env/ 
+
 # Ignore local class materials
-class_materials/
+/class_materials/
+
 # Ignore Python cache files
 __pycache__/
 *.pyc
+
 # Ignore environment files
 .env
+#Ignore enviroment files 
